<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_closet">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.a5_sample.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.a5_sample.ui.plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.a5_sample.ui.plan.HistoryFragment"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.example.a5_sample.ui.closet.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_closet" />

</navigation>