<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/sky_blue">

    <Button
        android:id="@+id/closeSortMenu"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="x"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/sort_header"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/applySortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/sortOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/sort_option1"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/sortOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/sort_option3"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/sortOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/sort_option4"
            android:textColor="@color/black"/>

    </RadioGroup>

    <Button
        android:id="@+id/applySortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/peri"
        android:fontFamily="@font/playfair_display"
        android:text="@string/sort_button_name"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>