<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:padding="10dp">

    <TextView
        android:id="@+id/planoutfitsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/create_outfit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addoutfitBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/event_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planoutfitsTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/eventNameInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/event_name"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/location"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/locationInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/location"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/date_fill_in_helper"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/randomBotton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/peri"
        android:fontFamily="@font/playfair_display"
        android:text="@string/random_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <Button
        android:id="@+id/chooseBotton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/peri"
        android:fontFamily="@font/playfair_display"
        android:text="@string/choose_button"
        app:layout_constraintStart_toEndOf="@+id/randomBotton"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <Button
        android:id="@+id/saveFitBotton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@color/peri"
        android:fontFamily="@font/playfair_display"
        android:text="@string/save_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
