<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_scrollFlags="scroll"
    tools:context=".ProfileFragment"
    android:background="@color/sky_blue">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/title_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profilenameLabel"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/profileeditTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileeditTextName"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/profileemailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilenameLabel" />

    <TextView
        android:id="@+id/profileemailLabel"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/profileeditTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileeditTextName" />

    <EditText
        android:id="@+id/profileeditTextEmail"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/playfair_display"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/profilesaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileemailLabel" />

    <Button
        android:id="@+id/profilesaveButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="186dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="183dp"
        android:backgroundTint="@color/peri"
        android:fontFamily="@font/playfair_display"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileeditTextEmail" />

    <TextView
        android:id="@+id/textViewUserStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_stats"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesaveButton"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textViewUserStats2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_stats2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesaveButton"
        app:layout_constraintVertical_bias="0.022" />


    <ImageView
        android:id="@+id/imageViewMostWorn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserStats" />

    <ImageView
        android:id="@+id/imageViewLeastWorn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserStats" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:fontFamily="@font/playfair_display"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserStats"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
